2D matrix , function , array question ,

--- a/day6.ipynb
+++ b/day6.ipynb
@@ -9,14 +9,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter the  no:- 2\n",
+      "enter the  no:- 1\n",
+      "enter the  no:- 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum =  2\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter the  no:- 1\n",
+      "enter the  no:- 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum =  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sumint():\n",
+    "    a=int(input(\"enter the  no:-\" ))\n",
+    "    b=int(input(\"enter the  no:-\" ))\n",
+    "    \"sum of two no\"\n",
+    "    sum=a+b\n",
+    "    print(\"sum = \" , sum)\n",
+    "    return\n",
+    "def diffint():\n",
+    "    a=int(input(\"enter the  no:-\" ))\n",
+    "    b=int(input(\"enter the  no:-\" ))\n",
+    "    \"sum of two no\"\n",
+    "    dif=a-b\n",
+    "    print(\"sum = \" , dif)\n",
+    "    return\n",
+    "sumint()\n",
+    "diffint()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
       "enter the  no:- 2\n"
      ]
     },
@@ -24,39 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sum=  4\n"
-     ]
-    }
-   ],
-   "source": [
-    "def sum(sum):\n",
-    "    a=int(input(\"enter the  no:-\" ))\n",
-    "    b=int(input(\"enter the  no:-\" ))\n",
-    "    \"sum of two no\"\n",
-    "    sum=a+b\n",
-    "    print(\"sum= \" , sum)\n",
-    "    return\n",
-    "sum(sum)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "enter the  no:- 3\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "0\n",
-      "1\n",
       "1\n"
      ]
     }
@@ -73,21 +95,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter the  no:-  2\n"
+      "enter the  no:-  3\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1: 1, 2: 4}\n"
+      "{1: 1, 2: 4, 3: 9}\n"
      ]
     }
    ],
@@ -106,24 +128,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "def randomlist(): \n",
-    "    l = []\n",
-    "    for i in range(4):\n",
-    "        il = []\n",
-    "        for j in range(4):\n",
-    "            il.append(random.randrange(1, 100))\n",
-    "        l.append(il)\n",
-    "    return l "
+    "import random \n",
+    "def randomlist():\n",
+    "    outer_list = []\n",
+    "    for i in  range(3):\n",
+    "        inner_list = []\n",
+    "        for i in range(3):\n",
+    "            inner_list.append(random.randint(1 , 100))\n",
+    "        outer_list.append(inner_list)\n",
+    "    return outer_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,23 +158,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sumlist(a , b ):\n",
-    "    suml = []\n",
-    "    for i in range(4):\n",
-    "        il = []\n",
-    "        for j in range(4):\n",
-    "            il.append(a[i][j] + b[i][j] )  \n",
-    "        suml.append(il)\n",
-    "    return suml "
+    "def addlist(l1 , l2):\n",
+    "    l = []\n",
+    "    for i in range(len(l1)):\n",
+    "        innerlist= []\n",
+    "        for j in range( len(l1[i]) ):\n",
+    "            innerlist.append(l1[i][j] + l2[i][j])\n",
+    "        l.append(innerlist)\n",
+    "    return l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,37 +192,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "l = sumlist(l1 , l2)\n",
+    "l = addlist(l1 , l2)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8  43  22  43  \n",
-      "40  23  61  84  \n",
-      "70  80  40  18  \n",
-      "58  57  56  26  \n",
+      "42  80  76  \n",
+      "15  36  49  \n",
+      "97  95  11  \n",
       "\n",
-      "49  97  72  77  \n",
-      "60  5  90  54  \n",
-      "34  44  24  62  \n",
-      "5  87  49  16  \n",
+      "38  88  74  \n",
+      "98  68  8  \n",
+      "22  61  1  \n",
       "\n",
-      "57  140  94  120  \n",
-      "100  28  151  138  \n",
-      "104  124  64  80  \n",
-      "63  144  105  42  \n",
+      "80  168  150  \n",
+      "113  104  57  \n",
+      "119  156  12  \n",
       "\n"
      ]
     }
@@ -212,6 +231,538 @@
     "print()\n",
     "printlist(l)\n",
     "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([[1 , 2, 3] , [ 4, 5 , 6 ] , [ 7 ,8 , 9 ] ] )\n",
+    "b = np.array([[1 , 2, 3] , [ 4, 5 , 6 ] , [ 7 ,8 , 9 ] ] )\n",
+    "c = a + b\n",
+    "d = a - b \n",
+    "e = a * b\n",
+    "f = a / b \n",
+    "g = a + 1 \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2,  4,  6],\n",
+       "       [ 8, 10, 12],\n",
+       "       [14, 16, 18]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0],\n",
+       "       [0, 0, 0],\n",
+       "       [0, 0, 0]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  4,  9],\n",
+       "       [16, 25, 36],\n",
+       "       [49, 64, 81]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1.],\n",
+       "       [1., 1., 1.],\n",
+       "       [1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2,  3,  4],\n",
+       "       [ 5,  6,  7],\n",
+       "       [ 8,  9, 10]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 30,  36,  42],\n",
+       "       [ 66,  81,  96],\n",
+       "       [102, 126, 150]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.dot(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 30,  36,  42],\n",
+       "       [ 66,  81,  96],\n",
+       "       [102, 126, 150]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.dot(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 4, 7])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.min(a , axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l1 = randomlist()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[81, 20, 98, 71], [55, 18, 77, 63], [60, 80, 25, 86], [17, 43, 68, 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(l1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l =[[1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "    [7, 8, 9]\n",
+    "   ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l1 = randomlist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l2 = randomlist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[16, 32, 93], [56, 97, 13], [8, 96, 53]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(l1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[34, 81, 89], [95, 41, 43], [97, 79, 14]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(l2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[50, 113, 182], [151, 138, 56], [105, 175, 67]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = addlist(l1, l2)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[50, 113, 182], [151, 138, 56], [105, 175, 67]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([[1 , 2, 3 ] , [4 , 5 ,6 ] , [7 , 8 ,9]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = np.array([[1 , 2, 3] , [ 4, 5 , 6 ] , [ 7 ,8 , 9 ] ] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = np.min(a , axis= 0) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1.],\n",
+       "       [1., 1., 1.],\n",
+       "       [1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2  1  0  \n",
+      "[1, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = [9 , 9, 9 ,9]\n",
+    "ans = []\n",
+    "i = len(c) -1 \n",
+    "ans.append((c[i]+1)%10)\n",
+    "carry = (c[i]+1)//10\n",
+    "print(carry)\n",
+    "i-=1\n",
+    "while(i >=0):\n",
+    "    print(i , end=\"  \" )\n",
+    "    d =(c[i] + carry)%10\n",
+    "    carry =(c[i] + carry) //10\n",
+    "    ans.append(d)\n",
+    "    i-=1\n",
+    "if(carry==1):\n",
+    "    ans.append(1)\n",
+    "ans.reverse()\n",
+    "print()\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[1 , 2, ,3 ,4 , 6 , -1 , -2 , - 3 , 1 ,2 , 0 ]   0 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- h.w\n",
+    "- https://www.geeksforgeeks.org/find-triplets-array-whose-sum-equal-zero/"
    ]
   },
   {
