bankmanagenment  System Project

--- a/day7.ipynb
+++ b/day7.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,20 +75,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'L': 2, 'o': 40, 'r': 40, 'e': 92, 'm': 48, ' ': 168, 'I': 2, 'p': 36, 's': 56, 'u': 28, 'i': 50, 'l': 22, 'y': 36, 'd': 36, 't': 80, 'x': 8, 'f': 8, 'h': 20, 'n': 68, 'g': 12, 'a': 44, '.': 8, 'b': 12, \"'\": 4, 'v': 4, 'c': 12, '1': 4, '5': 4, '0': 8, ',': 4, 'w': 8, 'k': 16}\n"
+      "{'l': 6, 'o': 10, 'r': 10, 'e': 23, 'm': 12, ' ': 42, 'i': 13, 'p': 9, 's': 14, 'u': 7, 'y': 9, 'd': 9, 't': 20, 'x': 2, 'f': 2, 'h': 5, 'n': 17, 'g': 3, 'a': 11, '.': 2, 'b': 3, \"'\": 1, 'v': 1, 'c': 3, '1': 1, '5': 1, '0': 2, ',': 1, 'w': 2, 'k': 4}\n"
      ]
     }
    ],
    "source": [
+    "string = string.lower()\n",
+    "d={}\n",
     "for i in string:\n",
-    "    i = i.lower()\n",
+    "    \n",
     "    if i in d:\n",
     "        d[i] = d[i] +  1\n",
     "    else:\n",
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -135,26 +137,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter k  0\n"
+      "enter k  1\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[11, 24, 22], [17, 11, 656], [22, 33, 121], [34], [40, 41, 65], [45, 1], [67, 23, 34]]\n"
+      "[[45, 1, 11], [17, 11, 656], [34, 12, 23], [67, 23, 34], [11, 24, 22], [22, 33, 121], [40, 41, 65]]\n"
      ]
     }
    ],
    "source": [
-    "listt =  [[67, 23 , 34 ] ,[45,1], [40,41 , 65], [34],[ 22 , 33,121], [17 , 11,656 ],[11 , 24,22 ] ] \n",
+    "listt =  [[67, 23 , 34 ] ,[45,1 ,11 ], [40,41 , 65], [34 , 12 ,23 ],[ 22 , 33,121], [17 , 11,656 ],[11 , 24,22 ] ] \n",
     "i = 0 \n",
     "k = int(input(\"enter k \"))\n",
     "n = len(listt)\n",
@@ -177,22 +179,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " adnan\n",
-      " a\n"
+      " adnanna\n",
+      " n\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$dn$n\n"
+      "ad$a$$a\n"
      ]
     }
    ],
@@ -208,24 +210,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[45, 1], [17, 11], [67, 23], [11, 24], [22, 33], [40, 41], [34, 67]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -244,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -309,27 +303,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.0\n",
-      "1.0\n",
-      "0.6666666666666666\n",
-      "0.5\n",
-      "0.4\n",
-      "0.3333333333333333\n",
-      "0.25\n",
-      "0 is in list \n",
-      "0.25\n",
-      "0.2857142857142857\n",
-      "0.2222222222222222\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -341,14 +317,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
       "in fun  10 10\n",
       "out of fn  10\n"
      ]
@@ -373,19 +348,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "object :  - \n",
     "    attributes  -------->     variables \n",
-    "    behaviour  ------>    method ---> function "
+    "    behaviour  ------>    method ---> function \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -444,6 +417,59 @@
    "source": [
     "adnan.info()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- An **attribute** is a characteristic of an object.\n",
+    "- A **method** is an operation we can perform with the object.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- For example we can create a class called Dog. \n",
+    "- An attribute of a dog may be its breed or its name,  \n",
+    "- while a method of a dog may be defined by a .bark()  method which returns a sound.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Let's get a better understanding of attributes through an example.\n",
+    "### Attributes\n",
+    "- The syntax for creating an attribute is:\n",
+    "### self.attribute = something\n",
+    "\n",
+    "- There is a special method called:\n",
+    "\n",
+    "-             __init__()\n",
+    "- This method is used to initialize the attributes of an   object. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
